--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 1 history
-7 catalog filter
-when input changes -> refetch content
+scroll to links in footer
+city change 
+cookie issue
+user avatar
+
+price views
