--- a/TODO
+++ b/TODO
@@ -1,7 +1,10 @@
-1 history
+history dates
 scroll to links in footer
-city change 
-cookie issue
-user avatar
-
 price views
+adaptive
+
+filters
+city when user not auth
+catalog
+
+geo
