--- a/TODO
+++ b/TODO
@@ -1,10 +1,5 @@
-history dates
-scroll to links in footer
 price views
 adaptive
 
-filters
-city when user not auth
-catalog
-
-geo
+nginx 404
+my geolocation
